--- a/bank_analysis.ipynb
+++ b/bank_analysis.ipynb
@@ -20,17 +20,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "17b1f8ec-c7fc-4154-856c-b07788fc50f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Install Necessary Packages\n",
-    "# pip install ucimlrepo"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
    "metadata": {},
@@ -104,23 +93,26 @@
     "\n",
     "These are the detail of all inputs:\n",
     "\n",
-    "1. age: (numeric)\n",
-    "2. job: type of job (categorical: 'admin.','blue-collar','entrepreneur','housemaid','management','retired','self-employed','services','student','technician','unemployed','unknown')\n",
-    "3. marital: marital status (categorical: 'divorced','married','single','unknown'; note: 'divorced' means divorced or widowed)\n",
-    "4. education: (categorical: primary, secondary, tertiary and unknown)\n",
-    "5. default: has credit in default? (categorical: 'no','yes','unknown')\n",
-    "6. housing: has housing loan? (categorical: 'no','yes','unknown')\n",
-    "7. loan: has personal loan? (categorical: 'no','yes','unknown')\n",
-    "8. balance: Balance of the individual.\n",
-    "9. contact: contact communication type (categorical: 'cellular','telephone')\n",
-    "10. month: last contact month of year (categorical: 'jan', 'feb', 'mar', ..., 'nov', 'dec')\n",
-    "11. day: last contact day of the week (categorical: 'mon','tue','wed','thu','fri')\n",
-    "12. duration: last contact duration, in seconds (numeric). Important note: this attribute highly affects the output target (e.g., if duration=0 then y='no'). Yet, the duration is not known before a call is performed. Also, after the end of the call y is obviously known. Thus, this input should only be included for benchmark purposes and should be discarded if the intention is to have a realistic predictive model.\n",
-    "13. campaign: number of contacts performed during this campaign and for this client (numeric, includes last contact)\n",
-    "14. pdays: number of days that passed by after the client was last contacted from a previous campaign (numeric; 999 means client was not previously contacted)\n",
-    "15. previous: number of contacts performed before this campaign and for this client (numeric)\n",
-    "16. poutcome: outcome of the previous marketing campaign (categorical: 'failure','nonexistent','success')\n",
-    "17. y - has the client subscribed a term deposit? (binary: 'yes','no')\n",
+    "| Feature Name | Type        | Description                                                                                   | Classes |\n",
+    "|--------------|-------------|-----------------------------------------------------------------------------------------------|---------|\n",
+    "| age          | Numeric     |                                                                                               |         |\n",
+    "| job          | Categorical | Type of job                                                                                   | 'admin.','blue-collar','entrepreneur','housemaid','management','retired','self-employed','services','student','technician','unemployed','unknown' |\n",
+    "| marital      | Categorical | Marital status                                                                                | 'divorced','married','single','unknown' |\n",
+    "| education    | Categorical |                                                                                               | 'primary', 'secondary', 'tertiary', 'unknown' |\n",
+    "| default      | Categorical | Has credit in default?                                                                        | 'no', 'yes', 'unknown' |\n",
+    "| housing      | Categorical | Has housing loan?                                                                             | 'no', 'yes', 'unknown' |\n",
+    "| loan         | Categorical | Has personal loan?                                                                            | 'no', 'yes', 'unknown' |\n",
+    "| balance      | Numeric     | Balance of the individual                                                                     |         |\n",
+    "| contact      | Categorical | Contact communication type                                                                    | 'cellular', 'telephone' |\n",
+    "| month        | Categorical | Last contact month of year                                                                    | 'jan', 'feb', 'mar', ..., 'nov', 'dec' |\n",
+    "| day          | Categorical | Last contact day of the week                                                                  | 'mon', 'tue', 'wed', 'thu', 'fri' |\n",
+    "| duration     | Numeric     | Last contact duration, in seconds                                                             |         |\n",
+    "| campaign     | Numeric     | Number of contacts performed during this campaign and for this client                        |         |\n",
+    "| pdays        | Numeric     | Number of days that passed by after the client was last contacted from a previous campaign    |         |\n",
+    "| previous     | Numeric     | Number of contacts performed before this campaign and for this client                         |         |\n",
+    "| poutcome     | Categorical | Outcome of the previous marketing campaign                                                    | 'failure', 'nonexistent', 'success' |\n",
+    "| y            | Binary      | Has the client subscribed to a term deposit?                                                  | 'yes', 'no' |\n",
+    "\n",
     "\n",
     "The classification goal is to predict if the client will subscribe (yes/no) a term deposit (variable y).\n",
     "\n",
