--- a/bank_analysis.ipynb
+++ b/bank_analysis.ipynb
@@ -43,8 +43,6 @@
     "import IPython\n",
     "import matplotlib.pyplot as plt\n",
     "import mglearn\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from IPython.display import HTML, display\n",
     "# from plotting_functions import *\n",
     "from sklearn.dummy import DummyClassifier\n",
@@ -52,13 +50,11 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_val_score, cross_validate, train_test_split\n",
     "from sklearn.pipeline import Pipeline, make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
     "from sklearn.metrics import make_scorer, f1_score, recall_score, precision_score, accuracy_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import uniform\n",
-    "import pandas as pd\n",
     "\n",
     "# %matplotlib inline\n",
     "pd.set_option(\"display.max_colwidth\", 200)\n",
@@ -676,7 +672,6 @@
     }
    ],
    "source": [
-    "import altair as alt\n",
     "alt.data_transformers.enable(\"vegafusion\")\n",
     "\n",
     "numerical_col = train_df.select_dtypes(include=['int64', 'float64']).columns.to_list()\n",
@@ -2144,7 +2139,7 @@
     "\n",
     "`logreg_bal` and `svc_bal` have lower accuracy compared to their unbalanced counterparts but significantly higher recall. This indicates they are better at identifying positive cases but at the cost of making more false positive errors.\n",
     "\n",
-    "Given the context of our bank marketing data set, we aim to detect the clients who will subscribe a term deposit given the features. Missing a potential \"yes\" could be more costly than false positives, as it represents a lost opportunity for the sales team to transform this potential customer. Therefore, a balanced model might be more suitable, as it is better at identifying customers who are more likely to subscribe the term deposit, allowing for targeted promotion and sales strategies."
+    "Given the context of our bank marketing data set, we aim to detect the clients who will subscribe a term deposit given the features. Missing a potential \"yes\" could be more costly than false positives, as it represents a lost opportunity for the sales team to transform this potential customer. Therefore, we chose `svc_bal` as the model has the highest `test_recall` score. "
    ]
   },
   {
@@ -2248,9 +2243,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bank_marketing_analysis]",
+   "display_name": "bank_marketing_analysis",
    "language": "python",
-   "name": "conda-env-bank_marketing_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2262,7 +2257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
