formatting - titles and empty spaces

--- a/bank_analysis.ipynb
+++ b/bank_analysis.ipynb
@@ -5,9 +5,9 @@
    "id": "9d48e527-8f26-4fd7-854c-dcd4177c56f7",
    "metadata": {},
    "source": [
-    "## Bank Marketing Analysis\n",
+    "## <center> Bank Marketing Analysis </center> \n",
     "\n",
-    "by Runtian Li, Rafe Chang, Sid Grover, Anu Banga"
+    "<center>by Runtian Li, Rafe Chang, Sid Grover, Anu Banga </center>"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
    "id": "7d925b92-d8fd-4fb3-8553-4810d94874ba",
    "metadata": {},
    "source": [
-    "# Summary\n",
+    "# <center> Summary </center>\n",
     "Here we build a model of balanced support vector machines to try to predict if a new client will subscribe to a term deposit. We tested five different classification models, including dummy classifier, unbalanced/balanced logistic regression, and unbalanced/balanced support vector machines, and chose the optimal model of balanced support vector machines based on how the model scored on the test data; the model has the highest test recall score of 0.82, which indicates that the model makes the least false negative predictions among all five models. With the train data, the model predicted 3634 of the true positives correctly when missing 586. \n",
     "\n",
     "The balanced support vector machines model considers 13 different numerical/ categorical features of customers. After hyperparameter optimization, the model's test accuracy increased from 0.81 to 0.83, which indicates that it is able to make accurate predictions 83 out of 100 times. We believe that the model is a sufficient predictor as it is able to predict the true positive cases correctly. \n"
@@ -80,18 +80,15 @@
    "cell_type": "markdown",
    "id": "0d6f5fbb-5151-4750-8afc-5544e88f896d",
    "metadata": {},
-   "source": [
-    "# Introduction\n",
-    "TBD"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "80037576-6e10-4cd3-8620-c565ff7da16a",
    "metadata": {},
    "source": [
-    "# Method\n",
-    "## Data\n",
+    "# <center>Methodology </center>\n",
+    "## Data Description\n",
     "The data is related with direct marketing campaigns of a Portuguese banking institution. The marketing campaigns were based on phone calls. Often, more than one contact to the same client was required, in order to access if the product (bank term deposit) would be ('yes') or not ('no') subscribed. It was sourced from the UCI Machine Learning Repository and can be found [here](https://archive.ics.uci.edu/dataset/222/bank+marketing). We will be using bank-full.csv with all examples and 17 inputs, ordered by date (older version of this dataset with less inputs). \n",
     "\n",
     "These are the detail of all inputs:\n",
@@ -117,10 +114,7 @@
     "| y            | Binary      | Has the client subscribed to a term deposit?                                                  | 'yes', 'no' |\n",
     "\n",
     "\n",
-    "The classification goal is to predict if the client will subscribe (yes/no) a term deposit (variable y).\n",
-    "\n",
-    "## Analysis\n",
-    "TBD"
+    "The classification goal is to predict if the client will subscribe (yes/no) a term deposit (variable y)."
    ]
   },
   {
@@ -128,9 +122,7 @@
    "id": "2d9eb913-a7f8-4d1f-80bf-5c4f7ac367dc",
    "metadata": {},
    "source": [
-    "# Results and Discussion\n",
-    "\n",
-    "TBD"
+    "# <center>Results and Discussion </center>"
    ]
   },
   {
@@ -2177,7 +2169,7 @@
    "id": "45b52bfd-07b7-43b9-b743-01aabd24775c",
    "metadata": {},
    "source": [
-    "### Hyperparameter Optimization"
+    "### <center> Hyperparameter Optimization </center>"
    ]
   },
   {
@@ -2595,7 +2587,7 @@
    "id": "198b6e27-a5e9-4a01-84c4-9aea31a097a7",
    "metadata": {},
    "source": [
-    "# References"
+    "# <center> References </center>"
    ]
   },
   {
@@ -2619,9 +2611,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bank_marketing_analysis]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-bank_marketing_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2633,7 +2625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
