updated file with uniques function

--- a/bank_analysis.ipynb
+++ b/bank_analysis.ipynb
@@ -166,17 +166,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0d9b26b4-525d-47b5-8835-5876b3bd899e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 0     58\n",
+       " 1     44\n",
+       " 2     33\n",
+       " 3     47\n",
+       " 4     35\n",
+       "       ..\n",
+       " 72    84\n",
+       " 73    87\n",
+       " 74    92\n",
+       " 75    93\n",
+       " 76    88\n",
+       " Length: 77, dtype: int64,\n",
+       " 'job': 0        management\n",
+       " 1        technician\n",
+       " 2      entrepreneur\n",
+       " 3       blue-collar\n",
+       " 4           unknown\n",
+       " 5           retired\n",
+       " 6            admin.\n",
+       " 7          services\n",
+       " 8     self-employed\n",
+       " 9        unemployed\n",
+       " 10        housemaid\n",
+       " 11          student\n",
+       " dtype: object,\n",
+       " 'marital': 0     married\n",
+       " 1      single\n",
+       " 2    divorced\n",
+       " dtype: object,\n",
+       " 'education': 0     tertiary\n",
+       " 1    secondary\n",
+       " 2      unknown\n",
+       " 3      primary\n",
+       " dtype: object,\n",
+       " 'default': 0     no\n",
+       " 1    yes\n",
+       " dtype: object,\n",
+       " 'housing': 0    yes\n",
+       " 1     no\n",
+       " dtype: object,\n",
+       " 'loan': 0     no\n",
+       " 1    yes\n",
+       " dtype: object,\n",
+       " 'contact': 0      unknown\n",
+       " 1     cellular\n",
+       " 2    telephone\n",
+       " dtype: object,\n",
+       " 'day': 0      5\n",
+       " 1      6\n",
+       " 2      7\n",
+       " 3      8\n",
+       " 4      9\n",
+       " 5     12\n",
+       " 6     13\n",
+       " 7     14\n",
+       " 8     15\n",
+       " 9     16\n",
+       " 10    19\n",
+       " 11    20\n",
+       " 12    21\n",
+       " 13    23\n",
+       " 14    26\n",
+       " 15    27\n",
+       " 16    28\n",
+       " 17    29\n",
+       " 18    30\n",
+       " 19     2\n",
+       " 20     3\n",
+       " 21     4\n",
+       " 22    11\n",
+       " 23    17\n",
+       " 24    18\n",
+       " 25    24\n",
+       " 26    25\n",
+       " 27     1\n",
+       " 28    10\n",
+       " 29    22\n",
+       " 30    31\n",
+       " dtype: int64,\n",
+       " 'month': 0     may\n",
+       " 1     jun\n",
+       " 2     jul\n",
+       " 3     aug\n",
+       " 4     oct\n",
+       " 5     nov\n",
+       " 6     dec\n",
+       " 7     jan\n",
+       " 8     feb\n",
+       " 9     mar\n",
+       " 10    apr\n",
+       " 11    sep\n",
+       " dtype: object,\n",
+       " 'duration': 0        261\n",
+       " 1        151\n",
+       " 2         76\n",
+       " 3         92\n",
+       " 4        198\n",
+       "         ... \n",
+       " 1568    1440\n",
+       " 1569    1405\n",
+       " 1570    1298\n",
+       " 1571    1246\n",
+       " 1572    1556\n",
+       " Length: 1573, dtype: int64,\n",
+       " 'campaign': 0      1\n",
+       " 1      2\n",
+       " 2      3\n",
+       " 3      5\n",
+       " 4      4\n",
+       " 5      6\n",
+       " 6      7\n",
+       " 7      8\n",
+       " 8      9\n",
+       " 9     10\n",
+       " 10    11\n",
+       " 11    12\n",
+       " 12    13\n",
+       " 13    19\n",
+       " 14    14\n",
+       " 15    24\n",
+       " 16    16\n",
+       " 17    32\n",
+       " 18    18\n",
+       " 19    22\n",
+       " 20    15\n",
+       " 21    17\n",
+       " 22    25\n",
+       " 23    21\n",
+       " 24    43\n",
+       " 25    51\n",
+       " 26    63\n",
+       " 27    41\n",
+       " 28    26\n",
+       " 29    28\n",
+       " 30    55\n",
+       " 31    50\n",
+       " 32    38\n",
+       " 33    23\n",
+       " 34    20\n",
+       " 35    29\n",
+       " 36    31\n",
+       " 37    37\n",
+       " 38    30\n",
+       " 39    46\n",
+       " 40    27\n",
+       " 41    58\n",
+       " 42    33\n",
+       " 43    35\n",
+       " 44    34\n",
+       " 45    36\n",
+       " 46    39\n",
+       " 47    44\n",
+       " dtype: int64,\n",
+       " 'pdays': 0       -1\n",
+       " 1      151\n",
+       " 2      166\n",
+       " 3       91\n",
+       " 4       86\n",
+       "       ... \n",
+       " 554    541\n",
+       " 555    543\n",
+       " 556    871\n",
+       " 557    550\n",
+       " 558    530\n",
+       " Length: 559, dtype: int64,\n",
+       " 'previous': 0       0\n",
+       " 1       3\n",
+       " 2       1\n",
+       " 3       4\n",
+       " 4       2\n",
+       " 5      11\n",
+       " 6      16\n",
+       " 7       6\n",
+       " 8       5\n",
+       " 9      10\n",
+       " 10     12\n",
+       " 11      7\n",
+       " 12     18\n",
+       " 13      9\n",
+       " 14     21\n",
+       " 15      8\n",
+       " 16     14\n",
+       " 17     15\n",
+       " 18     26\n",
+       " 19     37\n",
+       " 20     13\n",
+       " 21     25\n",
+       " 22     20\n",
+       " 23     27\n",
+       " 24     17\n",
+       " 25     23\n",
+       " 26     38\n",
+       " 27     29\n",
+       " 28     24\n",
+       " 29     51\n",
+       " 30    275\n",
+       " 31     22\n",
+       " 32     19\n",
+       " 33     30\n",
+       " 34     58\n",
+       " 35     28\n",
+       " 36     32\n",
+       " 37     40\n",
+       " 38     55\n",
+       " 39     35\n",
+       " 40     41\n",
+       " dtype: int64,\n",
+       " 'poutcome': 0    unknown\n",
+       " 1    failure\n",
+       " 2      other\n",
+       " 3    success\n",
+       " dtype: object,\n",
+       " 'target': 0     no\n",
+       " 1    yes\n",
+       " dtype: object}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore', category=FutureWarning)\n",
     "\n",
+    "# Import the uniques function from the src folder\n",
+    "sys.path.append('..')\n",
+    "from src.uniques import get_uniques\n",
+    "\n",
     "df = pd.read_csv(\"data/bank-full.csv\", delimiter=\";\")\n",
     "df.rename(columns={\"y\": \"target\"}, inplace=True)\n",
-    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=123)"
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=123)\n",
+    "\n",
+    "get_uniques(df)"
    ]
   },
   {
