scoring metrics changes

--- a/bank_analysis.ipynb
+++ b/bank_analysis.ipynb
@@ -1671,6 +1671,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ff5e1d-b95b-4650-afd2-e493569d669c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the scoring_metrics functions function from the src folder\n",
+    "sys.path.append('..')\n",
+    "from src.scoringmetrics import scoring_metrics\n",
+    "result=scoring_metrics(svc_bal, X_train, y_train, X_test, y_test, pos_label=\"yes\")\n",
+    "result"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "45b52bfd-07b7-43b9-b743-01aabd24775c",
    "metadata": {},
@@ -1930,7 +1944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
