import clean up

--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -20,54 +20,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb#W2sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mIPython\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb#W2sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m HTML, display, Image\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb#W2sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msklearn\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb#W2sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# from plotting_functions import *\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/chang/git/dsci_522_group_8_bank_marketing_project/notebooks/bank_analysis.ipynb#W2sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdummy\u001b[39;00m \u001b[39mimport\u001b[39;00m DummyClassifier\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "## Import necessary Packages\n",
-    "import altair as alt\n",
-    "import altair_viewer\n",
-    "alt.data_transformers.enable(\"vegafusion\")\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import statistics\n",
     "import os\n",
     "import sys\n",
     "\n",
+    "import altair as alt\n",
+    "alt.data_transformers.enable(\"vegafusion\")\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "sys.path.append(\"code/.\")\n",
     "\n",
-    "# Data \n",
-    "from ucimlrepo import fetch_ucirepo \n",
-    "\n",
     "# Machine Learning\n",
     "import IPython\n",
-    "import matplotlib.pyplot as plt\n",
-    "import mglearn\n",
-    "from IPython.display import HTML, display\n",
+    "from IPython.display import HTML, display, Image\n",
+    "\n",
     "# from plotting_functions import *\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import cross_val_score, cross_validate, train_test_split\n",
+    "from sklearn.model_selection import cross_val_score, cross_validate, train_test_split, RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline, make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
-    "from sklearn.metrics import make_scorer, f1_score, recall_score, precision_score, accuracy_score, ConfusionMatrixDisplay\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.metrics import make_scorer, f1_score, recall_score, precision_score, accuracy_score, ConfusionMatrixDisplay, classification_report, PrecisionRecallDisplay\n",
     "from scipy.stats import uniform\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import PrecisionRecallDisplay\n",
+    "\n",
     "\n",
     "# %matplotlib inline\n",
-    "pd.set_option(\"display.max_colwidth\", 200)\n",
-    "\n",
-    "from IPython.display import Image"
+    "pd.set_option(\"display.max_colwidth\", 200)"
    ]
   },
   {
@@ -2937,9 +2939,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bank_marketing_analysis]",
+   "display_name": "dsci513",
    "language": "python",
-   "name": "conda-env-bank_marketing_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2951,7 +2953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
