--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -6,4 +6,10 @@
   note = {\url{https://doi.org/10.24432/C5K306}},
 }
 
-
+@misc{timbers2023breast,
+  author = {Timbers, T. and Ostblom, J. and Lee, M.},
+  title = {Breast Cancer Predictor Report},
+  year = {2023},
+  howpublished = {GitHub repository},
+  note = {\url{https://github.com/ttimbers/breast_cancer_predictor_py/blob/0.0.1/src/breast_cancer_predictor_report.ipynb}},
+}
