--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -13,3 +13,14 @@
   howpublished = {GitHub repository},
   note = {\url{https://github.com/ttimbers/breast_cancer_predictor_py/blob/0.0.1/src/breast_cancer_predictor_report.ipynb}},
 }
+
+
+@article{moro2014data,
+  author = {Moro, S. and Cortez, P. and Rita, P.},
+  title = {A data-driven approach to predict the success of bank telemarketing},
+  journal = {Decis. Support Syst.},
+  volume = {62},
+  pages = {22-31},
+  year = {2014},
+}
+
