--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -24,3 +24,10 @@
   year = {2014},
 }
 
+@article{alsolami2020predicting,
+  author = {Alsolami, F.J. and Saleem, F. and Al-Ghamdi, A.S.},
+  title = {Predicting the Accuracy for Telemarketing Process in Banks Using Data Mining},
+  year = {2020},
+}
+
+
