--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -30,4 +30,13 @@
   year = {2020},
 }
 
+@article{vajiramedhin2014feature,
+  author = {Vajiramedhin, C. and Suebsing, A.},
+  title = {Feature Selection with Data Balancing for Prediction of Bank Telemarketing},
+  journal = {Applied mathematical sciences},
+  volume = {8},
+  pages = {5667-5672},
+  year = {2014},
+}
+
 
