--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -39,4 +39,10 @@
   year = {2014},
 }
 
-
+@article{moura2020optimization,
+  author = {Moura, A.F. and Pinho, C.M. and Napolitano, D.M. and Martins, F.S. and Fornari Junior, J.C.},
+  title = {Optimization of operational costs of Call centers employing classification techniques},
+  journal = {Research, Society and Development},
+  volume = {9},
+  year = {2020},
+}
