Updated notebook and README.md usage part

--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -22,7 +22,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "## Import necessary Packages\n",
@@ -140,6 +148,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2ce993d-30e1-438a-8840-44f10b3fc8f1",
+   "metadata": {},
+   "source": [
+    "## <center>Methods </center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c76d0d7-7668-4993-9d92-73498a60395a",
+   "metadata": {},
+   "source": [
+    "TBD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d9eb913-a7f8-4d1f-80bf-5c4f7ac367dc",
    "metadata": {},
    "source": [
@@ -161,17 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
-    "\n",
-    "# Import the uniques function from the src folder\n",
     "sys.path.append('..')\n",
     "from src.uniques import get_uniques\n",
-    "\n",
-    "df = pd.read_csv(\"../data/bank-full.csv\", delimiter=\";\")\n",
-    "df.rename(columns={\"y\": \"target\"}, inplace=True)\n",
-    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=123)\n",
-    "\n",
     "get_uniques(df);"
    ]
   },
@@ -189,18 +204,6 @@
     "                                spearman_correlation_matrix, \n",
     "                                text_EDA\n",
     "                             )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e338b68f-1bc2-4050-acc1-70a8be90a7b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numeric_cols = train_df.select_dtypes(include=['int64', 'float64']).columns.to_list()\n",
-    "categorical_cols = [\"job\", \"marital\", \"education\", \"default\", \"housing\", \"loan\", \"poutcome\"]\n",
-    "numerical_cols = numeric_cols"
    ]
   },
   {
@@ -1186,28 +1189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e677d9a0-c2ad-427c-8c64-77560bdcba01",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['age', 'balance', 'day', 'duration', 'campaign', 'pdays', 'previous']\n"
-     ]
-    }
-   ],
-   "source": [
-    "numeric_looking_columns = train_df.select_dtypes(include=np.number).columns.tolist()\n",
-    "print(numeric_looking_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "76daa040-dbf0-408a-b4c6-007c13a6be89",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Lists of feature names\n",
@@ -1218,241 +1208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8e856b43",
+   "execution_count": 2,
+   "id": "a24215d7-50f8-4e79-9d21-1609caa74fc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the count_classes function from the src folder\n",
-    "sys.path.append('..')\n",
-    "from src.preprocessor import preprocess_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "910d3a81-b522-42c4-8055-93bcec3557c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>balance</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>campaign</th>\n",
-       "      <th>pdays</th>\n",
-       "      <th>previous</th>\n",
-       "      <th>job_admin.</th>\n",
-       "      <th>job_blue-collar</th>\n",
-       "      <th>job_entrepreneur</th>\n",
-       "      <th>job_housemaid</th>\n",
-       "      <th>...</th>\n",
-       "      <th>education_secondary</th>\n",
-       "      <th>education_tertiary</th>\n",
-       "      <th>education_unknown</th>\n",
-       "      <th>default_yes</th>\n",
-       "      <th>housing_yes</th>\n",
-       "      <th>loan_yes</th>\n",
-       "      <th>poutcome_failure</th>\n",
-       "      <th>poutcome_other</th>\n",
-       "      <th>poutcome_success</th>\n",
-       "      <th>poutcome_unknown</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>28686</th>\n",
-       "      <td>-1.125848</td>\n",
-       "      <td>-0.525607</td>\n",
-       "      <td>-0.250585</td>\n",
-       "      <td>-0.568295</td>\n",
-       "      <td>-0.411533</td>\n",
-       "      <td>-0.245565</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9304</th>\n",
-       "      <td>1.136220</td>\n",
-       "      <td>-0.457253</td>\n",
-       "      <td>0.100475</td>\n",
-       "      <td>-0.245219</td>\n",
-       "      <td>-0.411533</td>\n",
-       "      <td>-0.245565</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41425</th>\n",
-       "      <td>1.324725</td>\n",
-       "      <td>0.405335</td>\n",
-       "      <td>0.266360</td>\n",
-       "      <td>-0.245219</td>\n",
-       "      <td>0.537396</td>\n",
-       "      <td>0.600341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44803</th>\n",
-       "      <td>-1.031595</td>\n",
-       "      <td>-0.457253</td>\n",
-       "      <td>-0.173429</td>\n",
-       "      <td>-0.245219</td>\n",
-       "      <td>-0.411533</td>\n",
-       "      <td>-0.245565</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5878</th>\n",
-       "      <td>-1.031595</td>\n",
-       "      <td>-0.280868</td>\n",
-       "      <td>-0.586213</td>\n",
-       "      <td>0.077857</td>\n",
-       "      <td>-0.411533</td>\n",
-       "      <td>-0.245565</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            age   balance  duration  campaign     pdays  previous  job_admin.  \\\n",
-       "28686 -1.125848 -0.525607 -0.250585 -0.568295 -0.411533 -0.245565         0.0   \n",
-       "9304   1.136220 -0.457253  0.100475 -0.245219 -0.411533 -0.245565         0.0   \n",
-       "41425  1.324725  0.405335  0.266360 -0.245219  0.537396  0.600341         0.0   \n",
-       "44803 -1.031595 -0.457253 -0.173429 -0.245219 -0.411533 -0.245565         0.0   \n",
-       "5878  -1.031595 -0.280868 -0.586213  0.077857 -0.411533 -0.245565         0.0   \n",
-       "\n",
-       "       job_blue-collar  job_entrepreneur  job_housemaid  ...  \\\n",
-       "28686              0.0               0.0            0.0  ...   \n",
-       "9304               1.0               0.0            0.0  ...   \n",
-       "41425              0.0               0.0            0.0  ...   \n",
-       "44803              0.0               0.0            0.0  ...   \n",
-       "5878               0.0               0.0            0.0  ...   \n",
-       "\n",
-       "       education_secondary  education_tertiary  education_unknown  \\\n",
-       "28686                  1.0                 0.0                0.0   \n",
-       "9304                   0.0                 0.0                0.0   \n",
-       "41425                  0.0                 0.0                0.0   \n",
-       "44803                  0.0                 1.0                0.0   \n",
-       "5878                   1.0                 0.0                0.0   \n",
-       "\n",
-       "       default_yes  housing_yes  loan_yes  poutcome_failure  poutcome_other  \\\n",
-       "28686          0.0          0.0       0.0               0.0             0.0   \n",
-       "9304           0.0          1.0       0.0               0.0             0.0   \n",
-       "41425          0.0          0.0       0.0               0.0             0.0   \n",
-       "44803          0.0          0.0       0.0               0.0             0.0   \n",
-       "5878           0.0          1.0       1.0               0.0             0.0   \n",
-       "\n",
-       "       poutcome_success  poutcome_unknown  \n",
-       "28686               0.0               1.0  \n",
-       "9304                0.0               1.0  \n",
-       "41425               1.0               0.0  \n",
-       "44803               0.0               1.0  \n",
-       "5878                0.0               1.0  \n",
-       "\n",
-       "[5 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Call the funciton preprocess_data \n",
-    "X_train_enc, X_train, y_train, X_test, y_test, preprocessor = preprocess_data(\n",
-    "    train_df, test_df, numerical_features, categorical_features, drop_features, \"target\")\n",
-    "X_train_enc.head()"
+    "# Display the transformed X_train"
    ]
   },
   {
