Updated notebook by adding the plots

--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
    "metadata": {
     "editable": true,
@@ -35,37 +35,7 @@
    "source": [
     "## Import necessary Packages\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import statistics\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "import altair as alt\n",
-    "alt.data_transformers.enable(\"vegafusion\")\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "sys.path.append(\"code/.\")\n",
-    "\n",
-    "# Machine Learning\n",
-    "import IPython\n",
-    "from IPython.display import HTML, display, Image\n",
-    "\n",
-    "# from plotting_functions import *\n",
-    "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import cross_val_score, cross_validate, train_test_split, RandomizedSearchCV\n",
-    "from sklearn.pipeline import Pipeline, make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
-    "from sklearn.metrics import make_scorer, f1_score, recall_score, precision_score, accuracy_score, ConfusionMatrixDisplay, classification_report, PrecisionRecallDisplay\n",
-    "from scipy.stats import uniform\n",
-    "\n",
-    "\n",
-    "# %matplotlib inline\n",
-    "pd.set_option(\"display.max_colwidth\", 200)"
+    "import numpy as np"
    ]
   },
   {
@@ -1162,6 +1132,34 @@
    "source": [
     "\n",
     "display(EDA_plot(df, numeric_cols, categorical_cols))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea48490b-1e0a-418e-888e-7f41b5c06d01",
+   "metadata": {},
+   "source": [
+    "```{figure} ../results/figures/numerical_dist_by_feat.png\n",
+    "---\n",
+    "width: 800px\n",
+    "name: numerical_features_distribution\n",
+    "---\n",
+    "Distribution of all the numerical features after feature selection\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce0e5a8-7e7b-473c-91bf-373727fd2f99",
+   "metadata": {},
+   "source": [
+    "```{figure} ../results/figures/categorical_dist_by_feat.png\n",
+    "---\n",
+    "width: 800px\n",
+    "name: categorical_features_distribution\n",
+    "---\n",
+    "Distribution of all the categorical features after feature selection\n",
+    "```"
    ]
   },
   {
