--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -2667,6 +2667,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4deedd3a-3929-4361-a214-db997820801b",
+   "metadata": {},
+   "source": [
+    "```{bibliography}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb20d746-d653-4366-b521-8c9a1b485b23",
    "metadata": {},
    "source": [
