--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -1548,9 +1548,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bank_marketing_analysis]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-bank_marketing_analysis-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1562,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
