--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c86a7598-c264-44e7-b70b-4495c8e01e10",
    "metadata": {
     "editable": true,
@@ -898,9 +898,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "34ff5e1d-b95b-4650-afd2-e493569d669c",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -938,16 +942,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.823822</td>\n",
+       "      <td>0.82385</td>\n",
        "      <td>0.815659</td>\n",
-       "      <td>0.386556</td>\n",
+       "      <td>0.386597</td>\n",
        "      <td>0.369435</td>\n",
        "      <td>0.861531</td>\n",
        "      <td>0.816462</td>\n",
-       "      <td>0.533665</td>\n",
+       "      <td>0.533704</td>\n",
        "      <td>0.508694</td>\n",
-       "      <td>19.93594</td>\n",
-       "      <td>32.581755</td>\n",
+       "      <td>59.114527</td>\n",
+       "      <td>102.086006</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -955,23 +959,20 @@
       ],
       "text/plain": [
        "   train_accuracy  test_accuracy  train_precision  test_precision  \\\n",
-       "0        0.823822       0.815659         0.386556        0.369435   \n",
+       "0         0.82385       0.815659         0.386597        0.369435   \n",
        "\n",
-       "   train_recall  test_recall  train_f1   test_f1  fit_time  score_time  \n",
-       "0      0.861531     0.816462  0.533665  0.508694  19.93594   32.581755  "
+       "   train_recall  test_recall  train_f1   test_f1   fit_time  score_time  \n",
+       "0      0.861531     0.816462  0.533704  0.508694  59.114527  102.086006  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import the scoring_metrics functions function from the src folder\n",
-    "sys.path.append('..')\n",
-    "from src.scoringmetrics import scoring_metrics\n",
-    "result=scoring_metrics(svc_bal, X_train, y_train, X_test, y_test, pos_label=\"yes\")\n",
-    "result"
+    "scoring_metric_df=pd.read_csv(\"../results/metrics/scoring_metrics.csv\")\n",
+    "scoring_metric_df"
    ]
   },
   {
@@ -1493,9 +1494,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:bank_marketing_analysis]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bank_marketing_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1507,7 +1508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
