--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -59,6 +59,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14be05d4",
+   "metadata": {},
+   "source": [
+    "Term deposit is valuable to banks because it ensures a stable stream of income that banks can utilize. Banks usually invest in higher-return financial products or lend money to other customers with a higher interest rate to make a profit. With term deposits, banks can better predict their cash flow. {cite}`chen2022term`\n",
+    "\n",
+    "While banks's marketing strategies nowadays are usually focused on attracting new customers, the banks must target the right potential customers. This research is aimed at identifying the correct audience for banks to further design marketing strategies.{cite}`dooley2023what`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df91a668-5c7b-4716-8ca3-e0d07d20842d",
    "metadata": {},
    "source": [
