--- a/docs/_sources/bank_analysis.ipynb
+++ b/docs/_sources/bank_analysis.ipynb
@@ -35,7 +35,8 @@
    "source": [
     "## Import necessary Packages\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from myst_nb import glue"
    ]
   },
   {
@@ -1023,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "9418a122",
    "metadata": {
     "tags": [
@@ -1033,55 +1034,36 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>svc__C</th>\n",
-       "      <th>svc__gamma</th>\n",
-       "      <th>svc__kernel</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.331065</td>\n",
-       "      <td>0.099076</td>\n",
-       "      <td>rbf</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     svc__C  svc__gamma svc__kernel\n",
-       "0  4.331065    0.099076         rbf"
-      ]
+      "application/papermill.record/text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_1a113\">\n  <thead>\n    <tr>\n      <th id=\"T_1a113_level0_col0\" class=\"col_heading level0 col0\" >svc__C</th>\n      <th id=\"T_1a113_level0_col1\" class=\"col_heading level0 col1\" >svc__gamma</th>\n      <th id=\"T_1a113_level0_col2\" class=\"col_heading level0 col2\" >svc__kernel</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_1a113_row0_col0\" class=\"data row0 col0\" >4.331065</td>\n      <td id=\"T_1a113_row0_col1\" class=\"data row0 col1\" >0.099076</td>\n      <td id=\"T_1a113_row0_col2\" class=\"data row0 col2\" >rbf</td>\n    </tr>\n  </tbody>\n</table>\n",
+      "application/papermill.record/text/plain": "<pandas.io.formats.style.Styler at 0x407042ec50>"
      },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "bh"
+      }
+     },
+     "output_type": "display_data"
     }
    ],
    "source": [
     "Best_Hyperparameters  = pd.read_csv(\"../results/metrics/best_params.csv\")\n",
     "bh = Best_Hyperparameters[['svc__C', 'svc__gamma', 'svc__kernel']]\n",
-    "bh"
+    "bh = bh.style.format().hide()\n",
+    "glue(\"bh\", bh, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75037265-d1f2-4174-9f09-f908c4e5a7d4",
+   "metadata": {},
+   "source": [
+    "```{glue:figure} bh\n",
+    ":figwidth: 300px\n",
+    ":name: \"Best Hyperparameters\"\n",
+    "\n",
+    "Best C, gamma and kernel parameters for svc_balanced model\n",
+    "```"
    ]
   },
   {
@@ -1102,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "aa64f7e7",
    "metadata": {
     "tags": [
@@ -1112,53 +1094,36 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Accuracy</th>\n",
-       "      <th>Recall</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.861329</td>\n",
-       "      <td>0.875118</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Accuracy    Recall\n",
-       "0  0.861329  0.875118"
-      ]
+      "application/papermill.record/text/html": "<style type=\"text/css\">\n</style>\n<table id=\"T_0e42b\">\n  <thead>\n    <tr>\n      <th id=\"T_0e42b_level0_col0\" class=\"col_heading level0 col0\" >Accuracy</th>\n      <th id=\"T_0e42b_level0_col1\" class=\"col_heading level0 col1\" >Recall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_0e42b_row0_col0\" class=\"data row0 col0\" >0.861329</td>\n      <td id=\"T_0e42b_row0_col1\" class=\"data row0 col1\" >0.875118</td>\n    </tr>\n  </tbody>\n</table>\n",
+      "application/papermill.record/text/plain": "<pandas.io.formats.style.Styler at 0x4078a5f490>"
      },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "aNr"
+      }
+     },
+     "output_type": "display_data"
     }
    ],
    "source": [
     "accuracyNrecall = pd.read_csv(\"../results/metrics/model_scores.csv\")\n",
     "aNr = accuracyNrecall[['Accuracy', 'Recall']]\n",
-    "aNr\n"
+    "aNr = aNr.style.format().hide()\n",
+    "glue(\"aNr\", aNr, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc9ba4f-d49b-482c-b6a9-76ea7ff60743",
+   "metadata": {},
+   "source": [
+    "```{glue:figure} aNr\n",
+    ":figwidth: 300px\n",
+    ":name: \"Test Results\"\n",
+    "\n",
+    "Accuracy and recall metrics on test data\n",
+    "```"
    ]
   },
   {
