--- a/notebooks/bank_analysis.ipynb
+++ b/notebooks/bank_analysis.ipynb
@@ -115,7 +115,7 @@
    "id": "5c76d0d7-7668-4993-9d92-73498a60395a",
    "metadata": {},
    "source": [
-    "### Analysis"
+    "## Analysis"
    ]
   },
   {
