--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -52,14 +52,13 @@
   title = {Term Deposit: Definition, How It's Used, Rates, and How to Invest}, 
   year = {2022}, 
   note = {\url{https://www.investopedia.com/terms/t/termdeposit.asp#:~:text=If%20a%20customer%20places%20money,the%20use%20of%20their%20funds}},
-  journal={Investopedia}
+  journal = {Investopedia},
 } 
-
 
 @article{dooley2023what,
   author = {Dooley, R.}, 
   title = {What’s Wrong With Bank Marketing?}, 
   year = {2023}, 
   note = {\url{https://www.forbes.com/sites/rogerdooley/2023/04/24/whats-wrong-with-bank-marketing/?sh=49b8c3241fef}},
-  journal={Forbes}
+  journal = {Forbes},
 } 
